# django-bot-testing

./: .env.dist  README.md  docker-compose.override.yaml  docker-compose.stage.yaml  docker-compose.yaml
backend/: .gitignore  Dockerfile  entrypoint.sh  pyproject.toml
backend/apps/bot/: admin.py  apps.py  models.py  tests.py  urls.py  views.py
backend/apps/bot/migrations/: 0001_initial.py
backend/apps/util/: cat.py  constant.py  dialogue.py  pagination.py
backend/project/: asgi.py  settings.py  urls.py
